--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,37 +5,18 @@
   / left column
   %div{:style => "float:left; display: table-cell; "}
     %div{:style => "width: 650px;"}
-      .h2 SameCup is
+      .h2 OSMT
       %br/
       %span{:style => "font-size: 14px;line-height: 19px;"}
-        %a{:class=>"video", :href=>"http://www.youtube.com/v/wpzUKW48M1U", :target=>"_blank"}
+        %a{:class=>"video", :href=>"http://osmt.herokuapp.com/", :target=>"_blank"}
           %img{:src=>"/images/video.png", :align=>"left"}
-        %b scrum board
-        full of ,
-        %b stickers
-        %b sprints
-        and other
-        %b agile oriented
-        functionality. This product was created by people who
-        %b love scrum
-        and decided to make unique management tool that will help to build right development process.
-        .g-clear-20
-        Open source code on Github :
-        %a{:href => "http://github.com/defsan/SameCup", :target => "_blank"} https://github.com/defsan/SameCup
+       
         
-        #videoembed{:style => "display:none"}
-          %object{:height => "385", :width => "640"}
-            %param{:name => "movie", :value => "http://www.youtube.com/v/wpzUKW48M1U?fs=1&hl=en_US&autoplay=1&rel=0"}
-            %param{:name => "allowFullScreen", :value => "true"}
-            %param{:name => "allowscriptaccess", :value => "always"}
-            %embed{:allowfullscreen => "true", :allowscriptaccess => "always", :height => "385", :src => "http://www.youtube.com/v/wpzUKW48M1U?fs=1&hl=en_US&autoplay=1&rel=0", :type => "application/x-shockwave-flash", :width => "640"}
-        
-      .g-clear
-      
+
   / right column
   %div{:style => "float: left; width: auto; display: table-cell;padding-left: 30px;"}
     %div{:style => "width:300px; font-size: 16px; padding-bottom:30px;"}
-      Simple, straight and lean scrum board service
+      OSMT, Online Scrum Management Tool 
       %div{:style => "text-align:right;font-size:40px; font-family:Tahoma;padding-right:100px;font-weight: bolder;"}= @projects_count
       %div{:style => "font-size: 12px; color:silver;"}
         %center current projects
@@ -48,3 +29,6 @@
         .form{:style => "width: 220px;text-align: center;font-size: 20px;"}
           %span.plus +
           = link_to 'Start New Project', new_project_path
+    .h3 
+    .h3 
+
