edit main page2

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
       = csrf_meta_tag
       %link{:href => "/samecup_32x32.png", :rel => "icon", :type => "image/png"}/
   %body
-    #menu
+    #menue
       %ul
         - if user_signed_in?
           = render :partial=>"shared/usermenu"
