edit header menu

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,8 +19,9 @@
           = render :partial=>"shared/usermenu"
         - if @project.nil?
           %li= link_to "Home", root_path, :class => yield(:menu) == 'home' ? 'selected-menu' : ''
+          %li= link_to "FNST", "http://fnst.ut.ac.ir", :class => yield(:menu) == 'tour' ? 'selected-menu' : ''
           %li
-            %a{:href => "http://blog.samecup.com"} Blog
+            %a{:href => "http://www.ut.ac.ir"} University of Tehran
     #head
       .logo.float-left
         %a{:href => "/"}
